// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> tests should display items on grid 1`] = `
<Fragment>
  <h2>
    rick and morty
  </h2>
  <div
    className="grid"
  >
    <GifItem
      id="abc"
      key="abc"
      title="Abc title"
      url="https://localhost/cualquiera.gif"
    />
  </div>
</Fragment>
`;

exports[`<GifGrid /> tests should render component as expected 1`] = `
<Fragment>
  <h2>
    rick and morty
  </h2>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="grid"
  />
</Fragment>
`;
